add missing cisco hdlc type

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -218,6 +218,7 @@ typedef enum {
 	TRACE_DLT_RAW = 12,
 #endif
 	TRACE_DLT_LINKTYPE_RAW = 101,
+	TRACE_DLT_C_HDLC = 104,
 	TRACE_DLT_IEEE802_11 = 105,
 	TRACE_DLT_LINUX_SLL = 113,
 	TRACE_DLT_PFLOG = 117,
