--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -142,3 +142,4 @@ install-exec-hook:
 	mkdir -p $(DESTDIR)$(plugindir)
 	cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_2048.so ppp_33.so
 	cd $(DESTDIR)$(plugindir) && $(LN_S) -f eth_2048.so link_5.so
+	cd $(DESTDIR)$(plugindir) && $(LN_S) -f ip_41.protocol eth_34525.protocol
