* Remember to clear the packet cache when trace_event is used to read packets  * Packets that had a corrupt or incorrect rt_type will no longer be erroneously treated as pcap packets (unless the rt_type ends up being between 2000 and 2999!)

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -318,6 +318,7 @@ typedef enum {
 	TRACE_RT_DLT_LINUX_SLL		=TRACE_RT_DATA_DLT+TRACE_DLT_LINUX_SLL,
 	TRACE_RT_DLT_PFLOG		=TRACE_RT_DATA_DLT+TRACE_DLT_PFLOG,
 	TRACE_RT_DLT_ATM_RFC1483 	=TRACE_RT_DATA_DLT+TRACE_DLT_ATM_RFC1483,
+	TRACE_RT_DATA_DLT_END		= 2999,
 	TRACE_RT_LAST			= (2<<31)
 } libtrace_rt_types_t;
 
