--- a/configure.in
+++ b/configure.in
@@ -152,7 +152,7 @@ fi
 # configure time options for use of DAG cards
 # borrowed from libpcap!
 AC_ARG_WITH(dag, 
-	    AS_HELP_STRING(--with-dag[=DIR],include DAG capture support (located in directory DIR, if supplied)),
+	    AS_HELP_STRING(--with-dag[=DIR],include DAG live capture support (located in directory DIR, if supplied)),
 [
         if test "$withval" = no
         then
@@ -187,8 +187,8 @@ if test "$with_dag" != no; then
 	AC_CHECK_LIB(dag, dag_open, dag_found=1, dag_found=0)
 	if test "$dag_found" = 1; then
 		ADD_LIBS="$ADD_LIBS -ldag"
-		AC_DEFINE(HAVE_DAG_API, 1, [define if you have a DAG API])
-		AC_DEFINE(HAVE_DAG,1,[conditional for building with DAG capture support])
+		AC_DEFINE(HAVE_DAG_API, 1, [define if you have the DAG API])
+		AC_DEFINE(HAVE_DAG,1,[conditional for building with DAG live capture support])
 		libtrace_dag=true
 		
 		AC_DEFINE(DAG_VERSION,30,[defines the DAG driver version])
@@ -227,8 +227,8 @@ if test "$with_dag" != no -a "$libtrace_dag" = false; then
 		AC_SUBST([DAG_TOOLS_DIR])
                 libtrace_dag=true
                 
-		AC_DEFINE(HAVE_DAG_API, 1, [define if you have a DAG API])
-		AC_DEFINE(HAVE_DAG,1,[conditional for building with DAG support])
+		AC_DEFINE(HAVE_DAG_API, 1, [define if you have the DAG API])
+		AC_DEFINE(HAVE_DAG,1,[conditional for building with DAG live capture support])
 		AC_DEFINE(DAG_VERSION, 24, [defines the DAG driver version])
 		libtrace_dag_version=24
         else
@@ -286,14 +286,14 @@ reportopt "Compiled with PCAP 0.8 support" $ac_cv_lib_pcap_pcap_next_ex
 reportopt "Compiled with compressed trace (zlib) support" $ac_cv_lib_z_gzopen
 if test x"$libtrace_dag" = xtrue; then
 	if test "$libtrace_dag_version" = 24; then
-		AC_MSG_NOTICE([Compiled with DAG capture support: 2.4])
+		AC_MSG_NOTICE([Compiled with DAG live capture support: 2.4])
 	elif test "$libtrace_dag_version" = 30; then
-		AC_MSG_NOTICE([Compiled with DAG capture support: 3.0])
+		AC_MSG_NOTICE([Compiled with DAG live capture support: 3.0])
 	else
-		AC_MSG_NOTICE([Compiled with DAG capture support: 2.5])
+		AC_MSG_NOTICE([Compiled with DAG live capture support: 2.5])
 	fi	
 else
-	AC_MSG_NOTICE([Compiled with DAG capture support: No])
+	AC_MSG_NOTICE([Compiled with DAG live capture support: No])
 fi
 reportopt "Building man pages/documentation" $libtrace_doxygen
 
