* Fixed get_payload_from_X functions not returning NULL in cases where they have a full X header but no subsequent payload (i.e. remaining would be exactly 0 upon return)  * trace_get_layer3 should not be a SIMPLE_FUNCTION anymore  * trace_get_ip now checks that at least a full IPv4 header is present  * Calls to payload_from_ethernet functions inside trace_get_layer3 will now update remaining correctly

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1127,7 +1127,7 @@ DLLEXPORT void *trace_get_payload_from_layer2(void *l2,
  * remaining may be NULL, otherwise it will be set to the number of captured
  * bytes after the pointer returned.
  */
-DLLEXPORT SIMPLE_FUNCTION
+DLLEXPORT 
 void *trace_get_layer3(const libtrace_packet_t *packet,
 		uint16_t *ethertype, uint32_t *remaining);
 
