Minor changes to the makefile to work on amd64 machines and to make sure we're picking up the right version of the library

--- a/test/Makefile
+++ b/test/Makefile
@@ -7,7 +7,7 @@ CFLAGS = -Wall -Wimplicit -Wformat -W -pedantic -pipe -g -O2
 		-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE
 CFLAGS += $(INCLUDE)
 libdir = $(PREFIX)/lib/.libs:$(PREFIX)/libpacketdump/.libs
-LDLIBS = -L$(PREFIX)/lib/.libs -L$(PREFIX)/libpacketdump/.libs -ltrace -lpacketdump -lfl
+LDLIBS = -L$(PREFIX)/lib/.libs -L$(PREFIX)/libpacketdump/.libs -ltrace -lpacketdump 
 
 BINS = test-pcap-bpf test-event test-time test-dir test-wireless test-errors \
 	#test-seek 
@@ -28,9 +28,9 @@ test-programs: $(BINS) test-drops
 	done				
 	@for i in erf pcap pcapfile duck legacyatm legacypos legacyeth tsh;\
 		do 						\
+		echo $$i; \
 		LD_LIBRARY_PATH="$(libdir)"			\
 		DYLD_LIBRARY_PATH="$(libdir)"			\
-		echo $$i; \
 		 ./test-drops $$i || exit $$?;			\
 	done
 	@echo All tests passed
