--- a/libtrace.vcproj
+++ b/libtrace.vcproj
@@ -1,87 +1,142 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="8.00"
 	Name="libtrace"
 	ProjectGUID="{A6485CD6-9A90-4A57-BDC0-23AF63288486}"
-	RootNamespace="libtrace">
+	RootNamespace="libtrace"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory=".\Release"
 			IntermediateDirectory=".\Release"
-			ConfigurationType="1"
+			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE"
-			CharacterSet="2">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				TypeLibraryName=".\Release/libtrace.tlb"
+				HeaderFileName=""
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
-				StringPooling="TRUE"
+				AdditionalIncludeDirectories="&quot;C:\Program Files\GnuWin32\include&quot;;&quot;C:\Users\root\Documents\Visual Studio 2005\Projects\WpdPack\Include&quot;;&quot;C:\Users\root\Documents\Visual Studio 2005\Projects\zlib&quot;;&quot;C:\Users\root\Documents\Visual Studio 2005\Projects\libtrace-3.0.3\lib&quot;"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;BUILDING_DLL"
+				StringPooling="true"
 				RuntimeLibrary="0"
-				EnableFunctionLevelLinking="TRUE"
+				EnableFunctionLevelLinking="true"
 				PrecompiledHeaderFile=".\Release/libtrace.pch"
 				AssemblerListingLocation=".\Release/"
 				ObjectFile=".\Release/"
 				ProgramDataBaseFileName=".\Release/"
 				WarningLevel="3"
-				SuppressStartupBanner="TRUE"/>
+				SuppressStartupBanner="true"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
-			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="odbc32.lib odbccp32.lib"
-				OutputFile=".\Release/libtrace.exe"
-				LinkIncremental="1"
-				SuppressStartupBanner="TRUE"
-				ProgramDatabaseFile=".\Release/libtrace.pdb"
-				SubSystem="1"
-				TargetMachine="1"/>
-			<Tool
-				Name="VCMIDLTool"
-				TypeLibraryName=".\Release/libtrace.tlb"
-				HeaderFileName=""/>
-			<Tool
-				Name="VCPostBuildEventTool"/>
-			<Tool
-				Name="VCPreBuildEventTool"/>
-			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
-				Culture="5129"/>
+				Culture="5129"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCLinkerTool"
+				AdditionalDependencies="odbc32.lib odbccp32.lib Ws2_32.lib wpcap.lib regex.lib"
+				OutputFile="$(OutDir)\$(ProjectName).dll"
+				LinkIncremental="1"
+				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="&quot;C:\Program Files\GnuWin32\lib&quot;;&quot;C:\Users\root\Documents\Visual Studio 2005\Projects\zlib&quot;;&quot;C:\Users\root\Documents\Visual Studio 2005\Projects\WpdPack\Lib&quot;"
+				ProgramDatabaseFile=".\Release/libtrace.pdb"
+				SubSystem="1"
+				TargetMachine="1"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory=".\Debug"
 			IntermediateDirectory=".\Debug"
 			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE"
-			CharacterSet="2">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				TypeLibraryName=".\Debug/libtrace.tlb"
+				HeaderFileName=""
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;C:\Documents and Settings\root\My Documents\Visual Studio Projects\WpdPack\Include&quot;;&quot;C:\Documents and Settings\root\My Documents\Visual Studio Projects\libtrace-3.0.0beta7-win\lib&quot;"
+				AdditionalIncludeDirectories="&quot;C:\Users\root\Documents\Visual Studio 2005\Projects\zlib&quot;;&quot;C:\Users\root\Documents\Visual Studio 2005\Projects\WpdPack\Include&quot;;&quot;C:\Users\root\Documents\Visual Studio 2005\Projects\libtrace-3.0.3\lib&quot;;&quot;C:\Program Files\GnuWin32\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;BUILDING_DLL"
-				MinimalRebuild="TRUE"
+				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				PrecompiledHeaderFile=".\Debug/libtrace.pch"
@@ -89,44 +144,55 @@
 				ObjectFile=".\Debug/"
 				ProgramDataBaseFileName=".\Debug/"
 				WarningLevel="3"
-				SuppressStartupBanner="TRUE"
-				DebugInformationFormat="4"/>
+				SuppressStartupBanner="true"
+				DebugInformationFormat="4"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
-			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="Ws2_32.lib wpcap.lib"
-				LinkIncremental="2"
-				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;C:\Documents and Settings\root\My Documents\Visual Studio Projects\WpdPack\Lib&quot;"
-				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile=".\Debug/libtrace.pdb"
-				SubSystem="1"
-				TargetMachine="1"/>
-			<Tool
-				Name="VCMIDLTool"
-				TypeLibraryName=".\Debug/libtrace.tlb"
-				HeaderFileName=""/>
-			<Tool
-				Name="VCPostBuildEventTool"/>
-			<Tool
-				Name="VCPreBuildEventTool"/>
-			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="_DEBUG"
-				Culture="5129"/>
+				Culture="5129"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCLinkerTool"
+				AdditionalDependencies="Ws2_32.lib wpcap.lib regex.lib"
+				LinkIncremental="2"
+				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="&quot;C:\Program Files\GnuWin32\lib&quot;;&quot;C:\Users\root\Documents\Visual Studio 2005\Projects\WpdPack\Lib&quot;"
+				GenerateDebugInformation="true"
+				ProgramDatabaseFile=".\Debug/libtrace.pdb"
+				SubSystem="1"
+				TargetMachine="1"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
 	<References>
@@ -134,99 +200,130 @@
 	<Files>
 		<Filter
 			Name="Source Files"
-			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat">
+			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
+			>
 			<File
-				RelativePath=".\lib\format_duck.c">
+				RelativePath=".\lib\format_atmhdr.c"
+				>
 			</File>
 			<File
-				RelativePath="lib\format_erf.c">
+				RelativePath=".\lib\format_duck.c"
+				>
 			</File>
 			<File
-				RelativePath="lib\format_helper.c">
+				RelativePath="lib\format_erf.c"
+				>
 			</File>
 			<File
-				RelativePath="lib\format_legacy.c">
+				RelativePath="lib\format_helper.c"
+				>
 			</File>
 			<File
-				RelativePath="lib\format_pcap.c">
+				RelativePath=".\lib\format_legacy.c"
+				>
 			</File>
 			<File
-				RelativePath=".\lib\format_pcapfile.c">
+				RelativePath="lib\format_pcap.c"
+				>
 			</File>
 			<File
-				RelativePath="lib\format_rt.c">
+				RelativePath=".\lib\format_pcapfile.c"
+				>
 			</File>
 			<File
-				RelativePath=".\lib\format_wag.c">
+				RelativePath="lib\format_rt.c"
+				>
 			</File>
 			<File
-				RelativePath=".\lib\libtraceio-stdio.c">
+				RelativePath=".\lib\format_tsh.c"
+				>
 			</File>
 			<File
-				RelativePath=".\lib\link_wireless.c">
+				RelativePath=".\lib\libtraceio-stdio.c"
+				>
 			</File>
 			<File
-				RelativePath="lib\linktypes.c">
+				RelativePath=".\lib\link_wireless.c"
+				>
 			</File>
 			<File
-				RelativePath="lib\malloc.c">
+				RelativePath="lib\linktypes.c"
+				>
 			</File>
 			<File
-				RelativePath="lib\protocols.c">
+				RelativePath="lib\malloc.c"
+				>
 			</File>
 			<File
-				RelativePath="lib\realloc.c">
+				RelativePath="lib\protocols.c"
+				>
 			</File>
 			<File
-				RelativePath="lib\strndup.c">
+				RelativePath="lib\realloc.c"
+				>
 			</File>
 			<File
-				RelativePath="lib\trace.c">
+				RelativePath="lib\strndup.c"
+				>
+			</File>
+			<File
+				RelativePath="lib\trace.c"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
-			Filter="h;hpp;hxx;hm;inl">
+			Filter="h;hpp;hxx;hm;inl"
+			>
 			<File
-				RelativePath="lib\common.h">
+				RelativePath="lib\common.h"
+				>
 			</File>
 			<File
-				RelativePath=".\lib\config.h">
+				RelativePath=".\lib\config.h"
+				>
 			</File>
 			<File
-				RelativePath="lib\dagformat.h">
+				RelativePath="lib\dagformat.h"
+				>
 			</File>
 			<File
-				RelativePath="lib\daglegacy.h">
+				RelativePath="lib\daglegacy.h"
+				>
 			</File>
 			<File
-				RelativePath=".\lib\format_erf.h">
+				RelativePath=".\lib\format_erf.h"
+				>
 			</File>
 			<File
-				RelativePath="lib\format_helper.h">
+				RelativePath="lib\format_helper.h"
+				>
 			</File>
 			<File
-				RelativePath="lib\libtrace.h">
+				RelativePath="lib\libtrace.h"
+				>
 			</File>
 			<File
-				RelativePath="lib\libtrace_int.h">
+				RelativePath="lib\libtrace_int.h"
+				>
 			</File>
 			<File
-				RelativePath=".\lib\libtraceio.h">
+				RelativePath=".\lib\libtraceio.h"
+				>
 			</File>
 			<File
-				RelativePath="lib\lt_inttypes.h">
+				RelativePath="lib\lt_inttypes.h"
+				>
 			</File>
 			<File
-				RelativePath="lib\rt_protocol.h">
-			</File>
-			<File
-				RelativePath="lib\wag.h">
+				RelativePath="lib\rt_protocol.h"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
-			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe">
+			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe"
+			>
 		</Filter>
 	</Files>
 	<Globals>
