* Added a separate .h file for the various ERF types as newer ERF types aren't specified in the DAG 2.4 drivers  * ERF traces should now return a Option Unavailable error for any unsupported cconfig options, rather than Unknown Option  * Added a bit of extra documentation to the new thread/mutex related code added to format_dag25.c

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES = libtrace.la
-include_HEADERS = libtrace.h dagformat.h lt_inttypes.h daglegacy.h rt_protocol.h libtraceio.h
+include_HEADERS = libtrace.h dagformat.h lt_inttypes.h daglegacy.h rt_protocol.h libtraceio.h erftypes.h
 
 extra_DIST = format_template.c
 if HAVE_NETPACKET_PACKET_H
