* Some systems, such as OpenBSD 3.5, don't have a stdint.h so don't try to include it if we don't have it

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -85,7 +85,9 @@
     #define LT_BITFIELD32 	uint32_t
     #define LT_BITFIELD64 	uint64_t
 #else
-#   include <stdint.h>
+    #ifdef HAVE_STDINT_H
+	#   include <stdint.h>
+    #endif
     #ifdef HAVE_GCCVISIBILITYPATCH
 	#define DLLEXPORT __attribute__ (visibility("default"))
 	#define DLLLOCAL __attribute__ (visibility("hidden"))
