--- a/configure.in
+++ b/configure.in
@@ -199,7 +199,7 @@ fi
 
 # turn the test part of the next block into a function, so it can be 
 # called multiple times for $dag_root, /root/dag, /usr/local/lib
-#dag_drv_v="DAG not present"
+dag_drv_v="DAG not present"
 
 # Now check for 2.4 DAG drivers which don't install as cleanly!
 if test "$with_dag" != no -a "$libtrace_dag" = false; then
@@ -242,6 +242,24 @@ if test "$with_dag" != no -a "$libtrace_dag" = false; then
         AC_MSG_RESULT($libtrace_dag)
 
 fi
+
+# Try to determine the DAG driver version
+if test x"$libtrace_dag" = xtrue; then
+        dag_drv_v="Unknown"
+	files=`locate /usr/*dag*/VERSION`
+        file_count=0
+
+        for i in $files; do
+                if $file_count > 0; then
+                        dag_drv_v="Indeterminate"
+                        break
+                fi
+                dag_drv_v=`cat $i`
+                file_count=$file_count+1
+        done
+fi
+DAG_VERSION_NUM=$dag_drv_v
+
 
 AC_CHECK_LIB(z, gzopen)
 
